force-app/main/default/objects/Action_Flag__e/Action_Flag__e.object-meta.xml
<CustomObject>
    <description>Holds a Flagged_Record_Id and Procrss_Name as an indicator for batch processes.</description>
    <label>Action Flag</label>
    <pluralLabel>Action Flags</pluralLabel>
</CustomObject>