force-app/main/default/objects/Action_Flag__e/fields/Flagged_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Flagged_Record_Id__c</fullName>
    <description>Record Id of the flagged record.</description>
    <label>Flagged Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>