force-app/main/default/objects/Action_Flag__e/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>Process Name to indicate with action should be made on this flagged record.</description>
    <label>Process Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>